# codex-switch

./: .gitignore  README.md  pyproject.toml
src/codex_switch/: accounts.py  auth.py  cli.py  quota.py
tests/: test_accounts_cli.py
