[project]
name = "codex-switch"
version = "0.3.0"
description = "Manage multiple OpenAI Codex CLI accounts — switch, check quota, validate tokens"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["codex", "openai", "account", "cli", "chatgpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "websockets>=14,<16",
]

[project.scripts]
codex-switch = "codex_switch.cli:main"

[project.urls]
Homepage = "https://github.com/Henry-Jessie/codex-switch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_switch"]
